--- a/assets/output.css
+++ b/assets/output.css
@@ -562,6 +562,18 @@ video {
   display: none;
 }
 
+.\!hidden {
+  display: none !important;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-black\/20 {
+  border-bottom-color: rgb(0 0 0 / 0.2);
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -584,13 +596,4 @@ video {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.stack-container {
-  display: grid;
-  grid-template-areas: 'overlap';
-}
-
-.stack-item {
-  grid-area: overlap;
 }
