--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -2,47 +2,69 @@
   assign id = section.id
   assign padding_bottom = section.settings.padding_bottom
   assign padding_top = section.settings.padding_top
-  assign wrapper = 'announcement-bar-outer-wrapper-' | append: id
+  assign wrapper = 'announcement-bar-wrapper-' | append: id
 %}
 
 <style>
-  .{{wrapper}} {
+  .{{ wrapper }} {
     padding-top: {{ padding_top }}px;
     padding-bottom: {{ padding_bottom }}px;
+  }
+
+  .background-color {
+    background-color: {{ section.settings.colors.background }};
+  }
+
+  .text-color,
+  splider-component.splide .splide__arrows .splide__arrow svg {
+    color: {{ section.settings.colors.text }};
   }
 </style>
 
 {% capture splide_options %}
   {
-      "type"   : "{{ section.settings.slide_type }}",
-      "perPage": {{ section.settings.slide_per_page }},
-      "pagination": {{section.settings.pagination}},
-      "arrows": {{section.settings.arrows}},
-      "autoplay": {{section.settings.autoplay}},
-      "interval": {{section.settings.autoplay_interval | times:1000}}
+    "type": "{{ section.settings.slide_type }}",
+    "perPage": {{ section.settings.slide_per_page }},
+    "pagination": {{ section.settings.pagination }},
+    "arrows": {{ section.settings.arrows }},
+    "autoplay": {{ section.settings.autoplay }},
+    "interval": {{ section.settings.autoplay_interval | times: 1000 }},
+    "direction": "{{ section.settings.direction }}",
+    "height": "2.5rem",
+    "autoStart": {{ section.settings.auto_scroll }},
+    "autoScroll": {
+      "speed": {{ section.settings.auto_scroll_speed }}
+    }
   }
 {% endcapture %}
+{% capture is_vertical %}
+  {% if section.settings.direction == 'ttb' %}
+    true
+  {% else %}
+    false
+  {% endif %}
+{% endcapture %}
 
-<div class='{{wrapper}} max-w-screen bg-black'>
+<div class='{{wrapper}} max-w-screen background-color'>
   <div class='announcement-bar'>
     <splider-component
+      data-auto-scroll='{{ section.settings.auto_scroll }}'
       data-options='{{ splide_options }}'
-      class='splide stack-container'
+      class='splide border-b border-b-black/20'
     >
-      <div class='splide__arrows stack-item'>
+      <div class='splide__arrows {% if is_vertical %}!hidden{% endif %}'>
         <button class='splide__arrow splide__arrow--prev svg-wrapper'>
-          {{ 'arrow-right.svg' | inline_asset_content }}
+          {{ 'chevron-right.svg' | inline_asset_content }}
         </button>
-
         <button class='splide__arrow splide__arrow--next svg-wrapper'>
-          {{ 'arrow-right.svg' | inline_asset_content }}
+          {{ 'chevron-right.svg' | inline_asset_content }}
         </button>
       </div>
-      <div class='splide__track stack-item'>
+      <div class='splide__track'>
         <ul class='splide__list'>
           {% for block in section.blocks %}
             <li class='splide__slide'>
-              {{ block.settings.text | replace: '<p', '<p class="text-center text-white"' }}
+              {{ block.settings.text | replace: '<p', '<p class="text-center text-color"' }}
             </li>
           {% endfor %}
         </ul>
@@ -90,6 +112,21 @@
       "default": 1
     },
     {
+      "type": "select",
+      "id": "direction",
+      "label": "Direction",
+      "options": [
+        {
+          "value": "ltr",
+          "label": "Horizontal"
+        },
+        {
+          "value": "ttb",
+          "label": "Vertical"
+        }
+      ]
+    },
+    {
       "type": "checkbox",
       "id": "pagination",
       "label": "Show pagination",
@@ -109,6 +146,22 @@
       "label": "Enable Auto play",
       "default": false,
       "info": "Auto play the slides"
+    },
+    {
+      "type": "checkbox",
+      "id": "auto_scroll",
+      "label": "Enable Auto scroll",
+      "default": false,
+      "info": "Auto scroll the slides"
+    },
+    {
+      "type": "range",
+      "id": "auto_scroll_speed",
+      "label": "Auto scroll speed",
+      "min": 0.5,
+      "max": 5,
+      "default": 1,
+      "step": 0.1
     },
     {
       "type": "range",
@@ -143,6 +196,12 @@
       "unit": "px",
       "label": "Bottom Padding",
       "default": 10
+    },
+    {
+      "type": "color_scheme",
+      "id": "colors",
+      "label": "Color scheme",
+      "default": "accent"
     }
   ],
   "blocks": [
@@ -158,6 +217,10 @@
       ]
     }
   ],
-  "presets": [{ "name": "Announcement Bar" }]
+  "presets": [
+    {
+      "name": "Announcement Bar"
+    }
+  ]
 }
 {% endschema %}
