--- a/snippets/theme-js-files.liquid
+++ b/snippets/theme-js-files.liquid
@@ -1,2 +1,6 @@
 <script src='{{ 'global.js' | asset_url }}' defer></script>
+
+<!-- SPLIDE -->
 <script src='{{ 'splide.min.js' | asset_url }}' defer></script>
+<script src='{{ 'splide-extension-auto-scroll.min.js' | asset_url }}' defer></script>
+<script src='{{ 'splide-component.js' | asset_url }}' defer></script>
