--- a/assets/output.css
+++ b/assets/output.css
@@ -554,29 +554,40 @@ video {
   display: none;
 }
 
+.sticky {
+  position: sticky;
+}
+
+.top-0 {
+  top: 0px;
+}
+
 .block {
   display: block;
 }
 
-.hidden {
-  display: none;
+.flex {
+  display: flex;
 }
 
 .\!hidden {
   display: none !important;
 }
 
-.border-b {
-  border-bottom-width: 1px;
+.hidden {
+  display: none;
 }
 
-.border-b-black\/20 {
-  border-bottom-color: rgb(0 0 0 / 0.2);
+.items-center {
+  align-items: center;
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+.justify-center {
+  justify-content: center;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .text-center {
@@ -585,11 +596,6 @@ video {
 
 .italic {
   font-style: italic;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow {
