--- a/sections/marquee.liquid
+++ b/sections/marquee.liquid
@@ -3,6 +3,7 @@
   assign padding_bottom = section.settings.padding_bottom
   assign padding_top = section.settings.padding_top
   assign wrapper = 'marquee-wrapper-' | append: id
+
   assign icon_position = section.settings.icon_position
   assign icon_padding = section.settings.icon_padding
   assign icon_size = section.settings.icon_size
@@ -20,13 +21,14 @@
   }
 
   @media screen and (max-width:768px) {
-    .{{ wrapper }} {
+    .{{wrapper}} {
       padding-top: {{ padding_top | times: 0.75 }}px;
       padding-bottom: {{ padding_bottom | times: 0.75 }}px;
       font-size: {{ font_size | times: 0.5 }}px;
     }
   }
-  .{{wrapper}} .text-styles{
+
+  .{{wrapper}} .text-styles {
     padding-{{ icon_position }}: {{ icon_padding }}px;
   }
 
@@ -41,7 +43,7 @@
     "pagination": false,
     "arrows": false,
     "autoWidth" : true,
-    "autoStart": true,
+    "autoStart": false,
     "gap":"{{ section.settings.gap }}px",
     "autoScroll": {
       "speed": {{ section.settings.auto_scroll_speed }}
@@ -52,7 +54,8 @@
 <div class='{{ wrapper }} max-w-screen background-color'>
   <div class='marquee background-color text-color'>
     <splider-component
-      data-auto-scroll='true'
+      data-auto-scroll
+      data-play-on-view
       data-options='{{ splide_options }}'
       class='splide'
     >
@@ -61,22 +64,16 @@
           {% for block in section.blocks %}
             {% liquid
               assign text_content = block.settings.text | replace: '<p', '<p class="text-center text-styles"'
-              assign icon = blank
-              assign block_icon = block.settings.block_icon
-
-              if block_icon != blank
-                assign icon = block_icon | image_url: width: icon_size, height: icon_size | image_tag
-              else
-                assign icon = section_icon | image_url: width: icon_size, height: icon_size | image_tag
-              endif
+              assign block_icon = block.settings.block_icon | default: section_icon
+              assign icon = block_icon | image_url: width: icon_size, height: icon_size | image_tag
             %}
 
             <li class='splide__slide flex items-center justify-center'>
-              {% if section.settings.icon_position == 'left' %}
+              {% if icon_position == 'left' %}
                 {{ icon }}
               {% endif %}
               {{ text_content }}
-              {% if section.settings.icon_position == 'right' %}
+              {% if icon_position == 'right' %}
                 {{ icon }}
               {% endif %}
             </li>
@@ -207,7 +204,8 @@
         {
           "type": "richtext",
           "id": "text",
-          "label": "Text"
+          "label": "Text",
+          "default": "<p>SCROLLING TEXT HERE</p>"
         },
         {
           "type": "image_picker",
