incomplete: banner and image snippet

--- a/assets/output.css
+++ b/assets/output.css
@@ -594,6 +594,20 @@ video {
   justify-content: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-top {
+  -o-object-position: top;
+     object-position: top;
+}
+
 .text-center {
   text-align: center;
 }
