feat: added video option in media banner. refactor: changed settings of prettier.

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -11,8 +11,7 @@
       <link
         rel='icon'
         type='image/png'
-        href='{{ settings.favicon | image_url: width: 32, height: 32 }}'
-      >
+        href='{{ settings.favicon | image_url: width: 32, height: 32 }}'>
     {%- endif -%}
 
     {%- unless settings.type_header_font.system? -%}
@@ -185,8 +184,7 @@
         as='font'
         href='{{ settings.type_body_font | font_url }}'
         type='font/woff2'
-        crossorigin
-      >
+        crossorigin>
       {% comment %}theme-check-enable AssetPreload{% endcomment %}
     {%- endunless -%}
     {%- unless settings.type_header_font.system? -%}
@@ -196,8 +194,7 @@
         as='font'
         href='{{ settings.type_header_font | font_url }}'
         type='font/woff2'
-        crossorigin
-      >
+        crossorigin>
       {% comment %}theme-check-enable AssetPreload{% endcomment %}
     {%- endunless -%}
 
