--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -59,8 +59,7 @@
     <splider-component
       data-play-on-view
       data-options='{{ splide_options }}'
-      class='splide'
-    >
+      class='splide'>
       <div class='splide__arrows {% if is_vertical %}!hidden{% endif %}'>
         <button class='splide__arrow splide__arrow--prev svg-wrapper'>
           {{ 'chevron-right.svg' | inline_asset_content }}
