--- a/sections/marquee.liquid
+++ b/sections/marquee.liquid
@@ -57,8 +57,7 @@
       data-auto-scroll
       data-play-on-view
       data-options='{{ splide_options }}'
-      class='splide'
-    >
+      class='splide'>
       <div class='splide__track'>
         <ul class='splide__list'>
           {% for block in section.blocks %}
