--- a/snippets/default-css.liquid
+++ b/snippets/default-css.liquid
@@ -191,8 +191,7 @@
     as='font'
     href='{{ settings.type_body_font | font_url }}'
     type='font/woff2'
-    crossorigin
-  >
+    crossorigin>
   {% comment %}theme-check-enable AssetPreload{% endcomment %}
 {%- endunless -%}
 {%- unless settings.type_header_font.system? -%}
@@ -202,7 +201,6 @@
     as='font'
     href='{{ settings.type_header_font | font_url }}'
     type='font/woff2'
-    crossorigin
-  >
+    crossorigin>
   {% comment %}theme-check-enable AssetPreload{% endcomment %}
 {%- endunless -%}
