--- a/snippets/meta-tags.liquid
+++ b/snippets/meta-tags.liquid
@@ -29,16 +29,14 @@
 {%- if request.page_type == 'product' -%}
   <meta
     property='og:price:amount'
-    content='{{ product.price | money_without_currency | strip_html }}'
-  >
+    content='{{ product.price | money_without_currency | strip_html }}'>
   <meta property='og:price:currency' content='{{ cart.currency.iso_code }}'>
 {%- endif -%}
 
 {%- if settings.social_twitter_link != blank -%}
   <meta
     name='twitter:site'
-    content='{{ settings.social_twitter_link | split: 'twitter.com/' | last | prepend: '@' }}'
-  >
+    content='{{ settings.social_twitter_link | split: 'twitter.com/' | last | prepend: '@' }}'>
 {%- endif -%}
 <meta name='twitter:card' content='summary_large_image'>
 <meta name='twitter:title' content='{{ og_title | escape }}'>
