--- a/assets/output.css
+++ b/assets/output.css
@@ -604,6 +604,10 @@ video {
   top: 0px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .block {
   display: block;
 }
@@ -620,8 +624,21 @@ video {
   display: none;
 }
 
+.aspect-\[800\/1200\] {
+  aspect-ratio: 800/1200;
+}
+
+.size-full {
+  width: 100%;
+  height: 100%;
+}
+
 .h-full {
   height: 100%;
+}
+
+.h-0 {
+  height: 0px;
 }
 
 .w-full {
@@ -649,10 +666,6 @@ video {
   text-align: center;
 }
 
-.text-\[52px\] {
-  font-size: 52px;
-}
-
 .italic {
   font-style: italic;
 }
@@ -661,4 +674,14 @@ video {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 768px) {
+  .md\:aspect-\[1200\/600\] {
+    aspect-ratio: 1200/600;
+  }
+
+  .md\:aspect-\[16\/9\] {
+    aspect-ratio: 16/9;
+  }
 }
