--- a/snippets/image.liquid
+++ b/snippets/image.liquid
@@ -1,22 +1,34 @@
 {% liquid
-  assign image = _image
+  assign desktop_image = _desktop_image
+  assign mobile_image = _mobile_image
   assign fetchpriority = _fetchpriority | default: 'auto'
   assign height = _height | default: 'auto'
 
   assign breakpoints = '1440,1200,800,450,380' | split: ','
 %}
 
-<picture style='max-height:{{ height }}px' class='h-full overflow-hidden object-cover'>
-  {% for width in breakpoints %}
-    <source
-      srcset='{{ image  | image_url: width: width }}'
-      media='(min-width: {{ width }}px)'>
-  {% endfor %}
+{% if desktop_image or mobile_image %}
+  <picture style='max-height:{{ height }}px' class='h-full overflow-hidden object-cover'>
+    {% if mobile_image %}
+      <source
+        srcset='{% for width in breakpoints %}{{ mobile_image | image_url: width: width }} {{ width }}w{% unless forloop.last %}, {% endunless %}{% endfor %}'
+        media='(max-width: 767px)'>
+    {% endif %}
 
-  <img
-    src='{{ image | image_url }}'
-    width='100%'
-    height='{{- height -}}{%- unless height == "auto" -%}px{%- endunless -%}'
-    fetchpriority='{{ fetchpriority }}'
-    alt='{{ image.alt | default: '' }}'>
-</picture>
+    <!-- Desktop Image -->
+    <source
+      srcset='{% for width in breakpoints %}{{ desktop_image | image_url: width: width }} {{ width }}w{% unless forloop.last %}, {% endunless %}{% endfor %}'
+      media='(min-width: 768px)'>
+
+    <!-- Fallback Image -->
+    <img
+      {% if _class %}
+        class='{{ _class }}'
+      {% endif %}
+      src='{{ desktop_image | image_url }}'
+      width='100%'
+      height='{{ height }}{% unless height == 'auto' %}px{% endunless %}'
+      fetchpriority='{{ fetchpriority }}'
+      alt='{{ desktop_image.alt | default: '' }}'>
+  </picture>
+{% endif %}
