--- a/snippets/theme-js-files.liquid
+++ b/snippets/theme-js-files.liquid
@@ -6,3 +6,6 @@
 <script src='{{ 'splide-extension-intersection.min.js' | asset_url }}' defer></script>
 <script src='{{ 'splide-extension-auto-scroll.min.js' | asset_url }}' defer></script>
 <script src='{{ 'splide-component.js' | asset_url }}' defer></script>
+
+<!-- SNIPPETS -->
+<script src='{{ 'video-external.js' | asset_url }}' defer></script>
