--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,7 @@
 
     {% render 'theme-css-files' %}
     {% render 'theme-js-files' %}
+    {% render 'theme-settings' %}
 
     {% comment %}
       {%- if localization.available_countries.size > 1
