--- a/snippets/video.liquid
+++ b/snippets/video.liquid
@@ -20,5 +20,5 @@
     autoplay: autoplay,
     controls: controls,
     style: style,
-    class: 'h-full w-full object-cover'
+    class: 'h-full w-full object-cover pointer-events-none'
 }}
