--- a/assets/base.css
+++ b/assets/base.css
@@ -1,3 +1,55 @@
 picture {
   display: block;
 }
+
+/* Base button class */
+.btn {
+  border-radius: var(--buttons-radius);
+  color: rgb(var(--color-button-text));
+  background-color: rgb(var(--color-button));
+  padding: 0.45rem 1rem;
+  text-align: center;
+  font-weight: bold;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: initial;
+}
+
+/* Primary button */
+.btn-primary {
+  background-color: rgb(var(--color-button));
+  color: rgb(var(--color-button-text));
+}
+
+.btn-primary:hover {
+  background-color: rgb(var(--color-button-text));
+  color: rgb(var(--color-button));
+}
+
+/* Secondary button */
+.btn-secondary {
+  background-color: rgb(var(--color-secondary-button));
+  color: rgb(var(--color-secondary-button-text));
+}
+
+.btn-secondary:hover {
+  background-color: rgb(var(--color-secondary-button-text));
+  color: rgb(var(--color-secondary-button));
+}
+
+/* Sizes (small, medium, large) */
+.btn-sm {
+  font-size: 0.875rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.btn-md {
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.btn-lg {
+  font-size: 1.25rem;
+  padding: 0.75rem 1.5rem;
+}
