--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -72,7 +72,9 @@
         <ul class='splide__list'>
           {% for block in section.blocks %}
             <li class='splide__slide flex items-center justify-center'>
+              {% if block.settings.url %}<a href='{{ block.settings.url }}'>{% endif %}
               {{ block.settings.text | replace: '<p', '<p class="text-center"' }}
+              {% if block.settings.url %}</a>{% endif %}
             </li>
           {% endfor %}
         </ul>
@@ -216,7 +218,8 @@
           "type": "richtext",
           "id": "text",
           "label": "Text"
-        }
+        },
+        { "type": "url", "id": "url", "label": "Redirection" }
       ]
     }
   ],
