--- a/sections/marquee.liquid
+++ b/sections/marquee.liquid
@@ -66,8 +66,10 @@
               assign block_icon = block.settings.block_icon | default: section_icon
               assign icon = block_icon | image_url: width: icon_size, height: icon_size | image_tag
             %}
-
             <li class='splide__slide flex items-center justify-center'>
+              {% if block.settings.url -%}
+                <a href='{{ block.settings.url }}' class='flex items-center justify-center'>
+              {%- endif %}
               {% if icon_position == 'left' %}
                 {{ icon }}
               {% endif %}
@@ -75,6 +77,7 @@
               {% if icon_position == 'right' %}
                 {{ icon }}
               {% endif %}
+              {% if block.settings.url %}</a>{% endif %}
             </li>
           {% endfor %}
         </ul>
@@ -210,7 +213,8 @@
           "type": "image_picker",
           "id": "block_icon",
           "label": "Icon"
-        }
+        },
+        { "type": "url", "id": "url", "label": "Redirection" }
       ]
     }
   ],
